Updates child safety contact information
Updates the contact information displayed on the child safety page.

Replaces generic labels for email, website, and response time
with specific labels and corresponding values from the i18n files.

This allows for easier updates to contact details through the
i18n files without requiring code changes.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -111,9 +111,11 @@
         "contact": {
             "title": "9. Contact Information",
             "content": "For child safety concerns, abuse reports, or questions about our safety policies:",
-            "email": "Safety Email",
-            "website": "Safety Website",
-            "responseTime": "Response Time",
+            "emailLabel": "Safety Email",
+            "emailValue": "nearcomapp@gmail.com",
+            "websiteLabel": "Safety Website",
+            "websiteValue": "https://nearcomapp.com/csae",
+            "responseTimeLabel": "Response Time",
             "responseTimeValue": "Within 24-48 hours for safety reports"
         },
         "emergencyResources": {
